# claude-code-teams-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/claude_teams/: _filelock.py  messaging.py  models.py  opencode_client.py  server.py  spawner.py  tasks.py  teams.py
tests/: test_messaging.py  test_models.py  test_opencode_client.py  test_server.py  test_spawner.py  test_teams.py
